# wealthflow

./: .gitignore  docker-compose.yml  start.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: analytics.py  auth.py  categories.py  health.py  statements.py  transactions.py
backend/app/core/: exceptions.py
backend/app/core/services/: analytics_service.py  auth_service.py  categorizer.py  statement_parser.py  statement_service.py
backend/app/core/services/parsers/: __init__.py  amex.py  axis.py  base.py  bob.py  boi.py  canara.py  hdfc.py  hsbc.py  icici.py  kotak.py  registry.py  sbi.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  category.py  monthly_summary.py  statement.py  transaction.py  user.py
backend/app/schemas/: analytics.py  auth.py  category.py  common.py  statement.py  transaction.py
backend/tests/: sample_statement_june.csv  sample_statement_may.csv
frontend/: check_logs.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: CategoryRingChart.tsx  TrendChart.tsx
frontend/src/components/layout/: Sidebar.tsx  (+1 more)
frontend/src/context/: BankFilterContext.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Analytics.tsx  Auth.css  Dashboard.tsx  Login.tsx  Register.tsx  Transactions.tsx  Upload.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  formatters.ts
(+5 files in other folders)
